tests/valid/boolean_operators/le_true.rs
/*
executionExitCode: 1
*/

main(): i32 {
    return 0 <= 2;
}