tests/invalid/scoping/missing_brace.rs
/*
fail: 1
*/

main(): i32 {
    if(0){
        return 1;
    return 2;
}